/*
 *
 *  Copyright 2017 Expedia, Inc.
 *
 *     Licensed under the Apache License, Version 2.0 (the "License");
 *     you may not use this file except in compliance with the License.
 *     You may obtain a copy of the License at
 *
 *         http://www.apache.org/licenses/LICENSE-2.0
 *
 *     Unless required by applicable law or agreed to in writing, software
 *     distributed under the License is distributed on an "AS IS" BASIS,
 *     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *     See the License for the specific language governing permissions and
 *     limitations under the License.
 *
 */
syntax = "proto3";
import "span.proto";

option java_package = "com.expedia.open.tracing.buffer";
option java_multiple_files = true;
option go_package = "haystack";

// This entity represents a collection of spans that belong to one traceId
message SpanBuffer {
    string traceId            = 1;  // unique trace id
    repeated Span childSpans  = 2;  // list of child spans
}
